--- a/public/index.html
+++ b/public/index.html
@@ -1,75 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<style type="text/css">
-		* {
-			margin:0px;
-			padding: 0px;
-			box-sizing: border-box;
-		}
-		body {
-			font-family:"Raleway",sans-serif;
-		}
-		.header {
-			width:100%;
-			height:50px;
-			line-height: 50px;
-			text-align: center;
-			background: #111;
-			color: #eee;
-			font-weight: 600;
-		}
-		.form {
-			padding:50px 20px;
-			background:#d2e9f7;
-		}
-		.form > div {
-			width:400px;
-			margin:10px auto;
-		}
-		.form .form-element input,
-		.form .form-element button {
-			width:100%;
-			padding: 10px;
-			margin-top: 10px;
-		}
-		.form .form-element button {
-			background: #111;
-			color:#eee;
-			outline: none;
-			border:none;
-			cursor: pointer;
-		}
-		.form .result {
-			text-align: center;
-			border-top:1px solid #eee;
-			margin-top:5px;
-		}
-		.list {
-			width:800px;
-			margin:40px auto;
-		}
-		.list h2 {
-			font-size: 40px;
-			margin-bottom: 20px;
-		}
-		.list table {
-			width:100%;
-			text-align: center;
-		}
-		.list table thead tr {
-			background: #555;
-			color:#eee;
-		}
-		.list table thead tr th,
-		.list table tbody tr td {
-			padding:5px;
-		}
-		.list table tbody tr:nth-child(odd){
-			background: #eee;
-		}
-	</style>
+	<title>Shortcut Generator URL</title>
+	<meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">	
+	<link rel="stylesheet" type="text/css" href="assets/style.css" />
 </head>
 <body>
 	<div class="header">
@@ -147,7 +83,7 @@
 					html += `
 						<tr>
 							<td>${data[i].origUrl}</td>
-							<td>${data[i].urlId}</td>
+							<td><a href="${host}api/${data[i].urlId}">${data[i].urlId}</a></td>
 						</tr>
 					`;
 				}
