--- a/public/index.html
+++ b/public/index.html
@@ -11,18 +11,18 @@
 	<div class="header">
 		Create Short URL
 	</div>
-	<div class="form">
+	<form action="api/create-short-url" id="urlsForm" class="form">
 		<div class="form-element">
 			<label for="longurl">Enter link</label>
 			<input type="text" id="longurl" placeholder="http://site.com">
 		</div>
 		<div class="form-element">
-			<button id="create-short-url">Create Short URL</button>
+			<button id="create-short-url" type="submit">Create Short URL</button>
 		</div>
 		<div class="result">
 			<a href="#" id="short-url" target="_blank"></a>
 		</div>
-	</div>
+	</form>
 	<div class="list">
 		<h2>Shorten links</h2>
 		<table id="list_urls">
@@ -36,62 +36,6 @@
 			</tbody>
 		</table>
 	</div>
-
-	<script type="text/javascript">
-		const host = "http://localhost:3333/";
-		document.querySelector("#create-short-url").addEventListener("submit",function(){
-			let longurl = document.querySelector("#longurl").value.trim();
-			if(longurl.length == 0){
-				alert("Enter valid url");
-				return;
-			} else if(!(longurl.startsWith("http://") || longurl.startsWith("https://"))){
-				alert("Enter valid link");
-				return;
-			}
-			fetch(host+"api/create-short-url",{
-				method:"POST",
-				body:JSON.stringify({
-					longurl:longurl
-				}),
-				headers:{
-					"Content-type":"application/json; charset=UTF-8"
-				}
-			}).then(function(response){
-				return response.json();
-			}).then(function(data){
-				if(data.status == "ok"){
-					document.querySelector("#short-url").innerText = host + data.shorturlid;
-					document.querySelector("#short-url").href = host + data.shorturlid;
-					let html = `
-						<tr>
-							<td>${longurl}</td>
-							<td>${host}${data.shorturlid}</td>
-						</tr>
-					`;
-					document.querySelector("#list_urls tbody").innerHTML += html;
-				}
-			}).catch(function(error){
-				alert("Something went wrong");
-			})
-		});
-		(function(){
-			fetch(host+"api/get-all-short-urls").then(function(response){
-				return response.json();
-			}).then(function(data){
-				let html = "";
-				for(let i=0;i<data.length;i++){
-					html += `
-						<tr>
-							<td>${data[i].origUrl}</td>
-							<td><a href="${host}api/${data[i].urlId}">${data[i].urlId}</a></td>
-						</tr>
-					`;
-				}
-				document.querySelector("#list_urls tbody").innerHTML = html;
-			}).catch(function(error){
-				alert("Something went wrong");
-			})
-		})();
-	</script>
+	<script src="./app.js"></script>
 </body>
 </html>
