feat(Package-json): Convert global package

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 	<div class="header">
 		Create Short URL
 	</div>
-	<form action="api/create-short-url" id="urlsForm" class="form">
+	<form id="urlsForm" class="form">
 		<div class="form-element">
 			<label for="longurl">Enter link</label>
 			<input type="text" id="longurl" placeholder="http://site.com">
@@ -36,6 +36,6 @@
 			</tbody>
 		</table>
 	</div>
-	<script src="./app.js"></script>
+	<script src="./app.js" type="module"></script>
 </body>
 </html>
